// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar displays a badge 1`] = `
<span
  aria-label="First Last"
  aria-labelledby="avatar-35 avatar-35__badge"
  className="fui-Avatar"
  id="avatar-35"
  role="img"
>
  <span
    aria-hidden={true}
    className=""
  >
    FL
  </span>
  <div
    aria-hidden={true}
    className="fui-PresenceBadge"
    id="avatar-35__badge"
    role="presentation"
  >
    <span>
      <svg
        aria-hidden={true}
        className=""
        fill="currentColor"
        height={10}
        viewBox="0 0 10 10"
        width={10}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 10A5 5 0 105 0a5 5 0 000 10zm2.1-5.9L4.85 6.35a.5.5 0 01-.7 0l-1-1a.5.5 0 01.7-.7l.65.64 1.9-1.9a.5.5 0 01.7.71z"
        />
      </svg>
    </span>
  </div>
</span>
`;

exports[`Avatar displays custom initials 1`] = `
<span
  aria-label="First Last"
  className="fui-Avatar"
  id="avatar-30"
  role="img"
>
  <span
    aria-hidden={true}
    className=""
  >
    IA
  </span>
</span>
`;

exports[`Avatar handles customSize 1`] = `
<span
  aria-label="First Last"
  className="fui-Avatar"
  id="avatar-36"
  role="img"
  style={
    Object {
      "height": "33px",
      "width": "33px",
    }
  }
>
  <span
    aria-hidden={true}
    className=""
  >
    FL
  </span>
</span>
`;

exports[`Avatar prioritizes image over icon 1`] = `
<span
  className="fui-Avatar"
  id="avatar-33"
  role="img"
>
  <span
    aria-hidden={true}
    className=""
    id="avatar-33__initials"
  >
    <span
      className="icon"
    />
  </span>
  <img
    alt=""
    aria-hidden={true}
    className=""
    role="presentation"
    src="i.png"
  />
</span>
`;

exports[`Avatar prioritizes image over initials 1`] = `
<span
  aria-label="First Last"
  className="fui-Avatar"
  id="avatar-32"
  role="img"
>
  <span
    aria-hidden={true}
    className=""
  >
    FL
  </span>
  <img
    alt=""
    aria-hidden={true}
    className=""
    role="presentation"
    src="i.png"
  />
</span>
`;

exports[`Avatar prioritizes image over initials and icon 1`] = `
<span
  aria-label="First Last"
  className="fui-Avatar"
  id="avatar-34"
  role="img"
>
  <span
    aria-hidden={true}
    className=""
  >
    FL
  </span>
  <img
    alt=""
    aria-hidden={true}
    className=""
    role="presentation"
    src="i.png"
  />
</span>
`;

exports[`Avatar prioritizes initials over icon 1`] = `
<span
  aria-label="First Last"
  className="fui-Avatar"
  id="avatar-31"
  role="img"
>
  <span
    aria-hidden={true}
    className=""
  >
    FL
  </span>
</span>
`;

exports[`Avatar renders 1 initial with a 1-word name 1`] = `
<span
  aria-label="First"
  className="fui-Avatar"
  id="avatar-26"
  role="img"
>
  <span
    aria-hidden={true}
    className=""
  >
    F
  </span>
</span>
`;

exports[`Avatar renders 2 initials with a 2-word name 1`] = `
<span
  aria-label="First Last"
  className="fui-Avatar"
  id="avatar-27"
  role="img"
>
  <span
    aria-hidden={true}
    className=""
  >
    FL
  </span>
</span>
`;

exports[`Avatar renders 2 initials with a 3-word name 1`] = `
<span
  aria-label="First M. Last"
  className="fui-Avatar"
  id="avatar-28"
  role="img"
>
  <span
    aria-hidden={true}
    className=""
  >
    FL
  </span>
</span>
`;

exports[`Avatar renders a default state 1`] = `
<span
  className="fui-Avatar"
  id="avatar-23"
  role="img"
>
  <span
    aria-hidden={true}
    className=""
    id="avatar-23__initials"
  >
    <svg
      aria-hidden={true}
      className=""
      fill="currentColor"
      height="1em"
      viewBox="0 0 20 20"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 2a4 4 0 100 8 4 4 0 000-8zM7 6a3 3 0 116 0 3 3 0 01-6 0zm-2 5a2 2 0 00-2 2c0 1.7.83 2.97 2.13 3.8A9.14 9.14 0 0010 18c1.85 0 3.58-.39 4.87-1.2A4.35 4.35 0 0017 13a2 2 0 00-2-2H5zm-1 2a1 1 0 011-1h10a1 1 0 011 1c0 1.3-.62 2.28-1.67 2.95A8.16 8.16 0 0110 17a8.16 8.16 0 01-4.33-1.05A3.36 3.36 0 014 13z"
      />
    </svg>
  </span>
</span>
`;

exports[`Avatar renders an icon 1`] = `
<span
  className="fui-Avatar"
  id="avatar-24"
  role="img"
>
  <span
    aria-hidden={true}
    className=""
    id="avatar-24__initials"
  >
    <span
      className="icon"
    />
  </span>
</span>
`;

exports[`Avatar renders an icon if the name is not alphabetic 1`] = `
<span
  aria-label="(111)-555-1234"
  className="fui-Avatar"
  id="avatar-29"
  role="img"
>
  <span
    aria-hidden={true}
    className=""
    id="avatar-29__initials"
  >
    <svg
      aria-hidden={true}
      className=""
      fill="currentColor"
      height="1em"
      viewBox="0 0 20 20"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 2a4 4 0 100 8 4 4 0 000-8zM7 6a3 3 0 116 0 3 3 0 01-6 0zm-2 5a2 2 0 00-2 2c0 1.7.83 2.97 2.13 3.8A9.14 9.14 0 0010 18c1.85 0 3.58-.39 4.87-1.2A4.35 4.35 0 0017 13a2 2 0 00-2-2H5zm-1 2a1 1 0 011-1h10a1 1 0 011 1c0 1.3-.62 2.28-1.67 2.95A8.16 8.16 0 0110 17a8.16 8.16 0 01-4.33-1.05A3.36 3.36 0 014 13z"
      />
    </svg>
  </span>
</span>
`;

exports[`Avatar renders an image 1`] = `
<span
  className="fui-Avatar"
  id="avatar-25"
  role="img"
>
  <span
    aria-hidden={true}
    className=""
    id="avatar-25__initials"
  >
    <svg
      aria-hidden={true}
      className=""
      fill="currentColor"
      height="1em"
      viewBox="0 0 20 20"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 2a4 4 0 100 8 4 4 0 000-8zM7 6a3 3 0 116 0 3 3 0 01-6 0zm-2 5a2 2 0 00-2 2c0 1.7.83 2.97 2.13 3.8A9.14 9.14 0 0010 18c1.85 0 3.58-.39 4.87-1.2A4.35 4.35 0 0017 13a2 2 0 00-2-2H5zm-1 2a1 1 0 011-1h10a1 1 0 011 1c0 1.3-.62 2.28-1.67 2.95A8.16 8.16 0 0110 17a8.16 8.16 0 01-4.33-1.05A3.36 3.36 0 014 13z"
      />
    </svg>
  </span>
  <img
    alt=""
    aria-hidden={true}
    className=""
    role="presentation"
    src="i.png"
  />
</span>
`;
